--- a/index.html
+++ b/index.html
@@ -6,20 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
+
+<header>
+  <style>
+    .cabecalho{
+      background-color: #383d58;
+      color:white;
+      display:flex;
+      justify-content:  space-around;
+      padding: 24px 0;
+      font-size: 24px;
+    }
+
+.cabecalho-lista-item{
+display: inline;
+margin:0 16px;
+padding: 24px 0;
+
+}
+
+
+  </style>
+</header>
+
 <style>
 
 body{
-  background-color: #383d58;
+  background-color:#383d58;
   color: white;
+  
 }
 </style>
 
 <body>
-  <header>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul>
-<li>Estudante</li>
-<li>Escola</li>
+  <header class="cabecalho">
+
+    <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/IMG/alurastart logo 1.png"  width="350px" alt="logo da alura start">
+    <ul  class="cabecalho-lista-item">
+<li class="cabecalho-lista-item">Estudante</li>
+<li class="cabecalho-lista-item">Escola</li>
+
 </ul>
 
 
