--- a/index.html
+++ b/index.html
@@ -4,105 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel=”stylesheet” href=”style.css”>
-    <link rel=”preconnect” href=”https://fonts.googleapis.com”>
-    <link rel=”preconnect” href=”https://fonts.gstatic.com” crossorigin>
-    <link href=”https://fonts.googleapis.com/
-    css2?family=Inter:wght@700&family=Poppins:wght@400;700&display=swap”
-    rel=”stylesheet”>
+    <title>Equipe Alura Start</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-
-
-
-<header>
-  <style>
-    .cabecalho{
-      background-color: #383d58;
-      color:white;
-      display:flex;
-      justify-content:  space-around;
-      padding: 24px 0;
-      font-size: 24px;
-    }
-
-.cabecalho-lista-item{
-display: inline;
-margin:0 16px;
-padding: 24px 0;
-
-}
-.escola{
-background-image: linear-gradient(#383D58,#00c0eb);
-color: white;
-display:flex;
-justify-content: center;
-align-items: center;
-padding: 24px;
-
-
-}
-.estudante-icone{
-  width:24px;
-}
-
-.estudante-div{
-  text-align: center;
-}
-
-.estudante-imagem{
-width: 120px;
-}
-
-  </style>
-</header>
-
-<style>
-
-body{
-  background-color:#383d58;
-  color: white;
-  
-}
-
-body{
-  font-family:'poppins', sans-serif ;
-}
-
-</style>
-
 <body>
-  <header class="cabecalho">
-
-    <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/IMG/alurastart logo 1.png"  width="350px" alt="logo da alura start">
-    <ul  class="cabecalho-lista-item">
-<li class="cabecalho-lista-item">Estudante</li>
-<li class="cabecalho-lista-item">Escola</li>
-
-</ul>
-
-
-</header>
-<section class="escola">
-  <div class="escola-conteúdo">
-  <h2 class="escola-titulo">Sobre a escola </h2>
-  <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.  </p>
-  <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
-  </div>
-<img src="/home/escola/Área de Trabalho/IMG/Monitor-cuate.png" width="400" alt="monitor imagem" >
-</section>
-<section class="Estudante">
-  <h2 class="Estudante-titulo"> Quem são nossos estudantes?</h2>
-  <div class="estudante-div">
-  <img class="estudante-imagem"  src="/home/escola/Área de Trabalho/IMG/Marcelo 1.png" alt="foto do estudante Marcelo">
-  <h3>Marcelo</h3>
-  <img class="estudante-icone" src="/home/escola/Área de Trabalho/IMG/instagram.png" alt=”Instagram”>
-<img class="estudante-icone" src="/home/escola/Área de Trabalho/IMG/github" alt=”Github”>
-<img class="estudante-icone" src="/home/escola/Área de Trabalho/IMG/linkedin" alt=”LinkedIn”>
-<h3 class="estudante-nome">Marcelo</h3>
-  </div>
-</section>
-  
-
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/img/alurastart logo 1.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+    </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+        </div>
+        <img class="escola-imagem" src="/home/escola/Área de Trabalho/img/Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt="icone github"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt="icone instagram"></a>
+        </div>
+    </div>
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+    </footer>
 </body>
 </html>
